--- a/src/styles.scss
+++ b/src/styles.scss
@@ -264,20 +264,20 @@ body {
 
 .marginTable {
   margin: 25px !important;
+ // position: fixed !important;
   }
 
-
+ 
   
  
-// table {
+table {
  
-//   margin: 25px !important;
+  // margin: 25px !important;
   
-//   }
+  }
 
   .search-container {
     display: flex !important;
-    
     align-items: center !important;
     background-color:#f2f2f2 !important;
     
