--- a/src/app/pages/sales/daily-sales-data/daily-sales-data.component.html
+++ b/src/app/pages/sales/daily-sales-data/daily-sales-data.component.html
@@ -116,14 +116,24 @@
                         <div class="card-block">
                             <table class="table table-striped table-bordered table-hover compact marginTable">
                                 <thead style="position: sticky; top: 0; text-align: center;">
+
                                     <tr>
+                                    </tr>
+                                    <tr>
+                                      <th colspan="12">
+                                        <div class="search-container">
+                                          <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                                        </div>
+                                      </th>
+                                    </tr>
+                                    <!-- <tr>
                                     </tr>
                                     <th colspan="9">
                                         <div class="search-container">
                                             <input type="text" [(ngModel)]="searchQuery" (input)="filterData()"
                                                 placeholder="Search...">
                                         </div>
-                                    </th>
+                                    </th> -->
                                     <tr>
                                         <th class="td_left">Customer Name</th>
                                         <th class="td_right"> Target Sales Amount</th>
