--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
@@ -73,7 +73,7 @@
 
                     <div class="card-block">
 
-                        <table class="table table-striped table-bordered table-hover compact margintable">
+                        <table class="table table-striped table-bordered table-hover compact margintable" style="margin-top:25px;">
 
                             <thead style="position: sticky; top: 0; text-align: center;">
                                 <tr >                               
