--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@
   100% {
     transform: scale(1)
   }
-}
+}.c
 
 .carousel-item {
   transition: opacity 0.7s ease !important;
@@ -55,15 +55,19 @@ thead {
 tr:nth-child(even) {
   background-color: #f2f2f2;
 }
-
 // .Ahead th{
 //   background: #b8cfee !important;
 //   margin: -1% !important;
 // }
+select{
+  width: 25px;
+  
+}
+
+
 
 tfoot {
   background-color: #f1f2f4;
-  
 }
 
 .card {
@@ -159,12 +163,12 @@ h5,
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+.table-fixed {
+  display: block;
+  height: 450px;
+}
 
 
- .table-fixed {
-    display: block;
-    height: 450px;
-   }
 
 table tr.highlight {
   background-color: #dee2e6 !important;
@@ -186,21 +190,19 @@ table td.newhighlight {
 
 .td_left {
   text-align: left;
-  
 }
 
 th,
 td {
   vertical-align: middle;
- 
 }
 
 
 
-//  body[data-sidebar=dark].vertical-collpsed .vertical-menu #sidebar-menu > ul ul {
-//    background-color: #2a3042;
-//    width: 200000px;
-//  }
+// body[data-sidebar=dark].vertical-collpsed .vertical-menu #sidebar-menu > ul ul {
+//   background-color: #2a3042;
+//   width: 200000px;
+// }
 
 .table {
 
@@ -211,18 +213,18 @@ td {
 
 }
 
-// html {
-//   margin-left: 3px;
-//   margin-right: 3px;
-//   overflow: auto;
-//   overflow-x: hidden;
-//   background: url(./assets/images/bg.jpg) repeat-x scroll left bottom transparent;
-//   border-style: solid none solid;
-//   border-color: #93B5D2;
-//   border-width: 1px medium 1px;
-//   // position: relative !important;
-//   //   z-index: 0 !important;
-// }
+html {
+  margin-left: 3px;
+  margin-right: 3px;
+  overflow: auto;
+  overflow-x: hidden;
+  background: url(./assets/images/bg.jpg) repeat-x scroll left bottom transparent;
+  border-style: solid none solid;
+  border-color: #93B5D2;
+  border-width: 1px medium 1px;
+  // position: relative !important;
+  //   z-index: 0 !important;
+}
 
 .ng-select .ng-clear-wrapper {
   display: none !important;
@@ -244,7 +246,7 @@ td {
 }
 
 body {
-  //overflow: hidden;
+  overflow: hidden;
   background-color: white !important;
 }
 
@@ -262,35 +264,93 @@ body {
   transform: translate(-50%, -50%);
 }
 
-.marginTable {
-  margin: 25px !important;
- // position: fixed !important;
-  }
+// table {
+//   //  caption-side: bottom !important;
+//   //  border-collapse: collapse !important;
+//   //  top: 65% !important;
+//   //  padding: 10px !important;
+//   margin: 25px !important;
+// }
+.filter-container {
+  display: inline-block !important;
+}
 
- 
-  
- 
-table {
- 
-  // margin: 25px !important;
-  
-  }
+.filter-label {
+  font-weight: bold !important;
+  margin-right: 10px !important;
+}
 
-  .search-container {
-    display: flex !important;
-    align-items: center !important;
-    background-color:#f2f2f2 !important;
-    
-  }
-  
-  .search-container input {
-    color: black !important;
-    padding: 1px 3px 1px 3px !important;
-    background: white repeat-x 0 0 !important;
-    border-width: 1px !important;
-    border-style: solid !important;
-    border-color: #b5b8c8 !important;
-    width: 300px !important;
-  }
+.filter-toggle {
+  cursor: pointer!important;
+  display: inline-block!important;
+  padding: 0 5px!important;
+  border: 1px solid #ccc!important;
+  border-radius: 4px!important;
+}
 
+.filter-icon {
+  display: inline-block!important;
+  vertical-align: middle!important;
+  margin-left: 5px!important;
+  transform: rotate(0deg)!important;
+  transition: transform 0.2s ease!important;
+}
+
+.filter-options {
+  display: none!important;
+  position: absolute!important;
+  background-color: #fff!important;
+  border: 1px solid #ccc!important;
+  border-top: none!important;
+  border-radius: 0 0 4px 4px!important;
+  z-index: 1!important;
+}
+
+.show-filter-options {
+  display: block!important;
+}
+
+.filter-option {
+  padding: 4px!important;
+  cursor: pointer!important;
+  transition: background-color 0.2s ease!important;
+  width: 100px!important;
+  border: 1px solid #ccc!important;
+  border-radius: 4px!important;
+  display: inline-block!important;
+ 
+}
+
+// .filter-option:hover {
+//   background-color: #f0f0f0!important;
+// }
+
+.input-box {
+  display: inline-block!important;
+  border: 1px solid #ccc!important;
+  border-radius: 4px!important;
+  margin-top: 2px!important;
+  padding: 3px!important;
+ 
+}
+
+.show-input {
+  display: inline-block!important;
+}
+.search-container {
+  display: flex !important;
+  align-items:center !important;
+  background-color:#f2f2f2 !important;
+  text-align: left !important;
   
+}
+
+.search-container input {
+  color: black !important;
+  padding: 1px 3px 1px 3px !important;
+  background: white repeat-x 0 0 !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: #b5b8c8 !important;
+  width: 300px!important;
+}
