--- a/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
+++ b/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
@@ -106,24 +106,78 @@
                     </div>
                 </th>
                 <tr>
-                  <th class="td_left" *ngFor="let column of tableColumns">
-                    {{ column }}
-                    <div class="filter-container">
-                      <div class="filter-toggle" (click)="toggleFilter(column)">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                      </div>
-                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
-                        <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
-                        <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
-                          <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                  
+                      
+                    <th class="td_left" style="width: 20%;">Customer Name
+                      <div class="filter-container">
+                        <div class="filter-toggle" (click)="toggleFilter('CustomerName')">
+                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                        </div>
+                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CustomerName']}">
+                          <div class="filter-option" (click)="applyFilter('CustomerName', 'Option 1')">Filter</div>
+                          <div class="input-box" [class.show-input]="isFilterInputOpen['CustomerName']">
+                            <input type="text" placeholder=" " (blur)="toggleFilterInput('CustomerName')">
+                          </div>
                         </div>
                       </div>
-                    </div>
-                  </th>
-                  
-
+                    </th>
+                    <th class="td_right">Quarter 01
+                      <div class="filter-container">
+                        <div class="filter-toggle" (click)="toggleFilter('Quarter01')">
+                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                        </div>
+                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter01']}">
+                          <div class="filter-option" (click)="applyFilter('Quarter01', 'Option 1')">Filter</div>
+                          <div class="input-box" [class.show-input]="isFilterInputOpen['Quarter01']">
+                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Quarter01')">
+                          </div>
+                        </div>
+                      </div>
+                    </th>
+                    <th class="td_right">Quarter 02
+                      <div class="filter-container">
+                        <div class="filter-toggle" (click)="toggleFilter('Quarter02')">
+                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                        </div>
+                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter02']}">
+                          <div class="filter-option" (click)="applyFilter('Quarter02', 'Option 1')">Filter</div>
+                          <div class="input-box" [class.show-input]="isFilterInputOpen['Quarter02']">
+                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Quarter02')">
+                          </div>
+                        </div>
+                      </div>
+                    </th>
+                    <th class="td_right">Quarter 03
+                      <div class="filter-container">
+                        <div class="filter-toggle" (click)="toggleFilter('Quarter03')">
+                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                        </div>
+                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter03']}">
+                          <div class="filter-option" (click)="applyFilter('Quarter03', 'Option 1')">Filter</div>
+                          <div class="input-box" [class.show-input]="isFilterInputOpen['Quarter03']">
+                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Quarter03')">
+                          </div>
+                        </div>
+                      </div>
+                    </th>
+                    <th class="td_right">Quarter 04
+                      <div class="filter-container">
+                        <div class="filter-toggle" (click)="toggleFilter('Quarter04')">
+                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                        </div>
+                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Quarter04']}">
+                          <div class="filter-option" (click)="applyFilter('Quarter04', 'Option 1')">Filter</div>
+                          <div class="input-box" [class.show-input]="isFilterInputOpen['Quarter04']">
+                            <input type="text" placeholder=" " (blur)="toggleFilterInput('Quarter04')">
+                          </div>
+                        </div>
+                      </div>
+                    </th>
+                    <!-- <th class="td_left">Balance 50% Debit Note/Invoice No.</th>
+                    <th class="td_right">Development Cost Received In INR</th>
+                    <th class="td_right">Balanced D.C. In INR to be Received</th> -->
                   </tr>
-              </thead>
+        </thead>
               <tbody *ngIf="Tabledata.length !=0">
                 <tr *ngFor="let data of Tabledata;let indexOfelement = index">
                   <td class="td_left">{{data?.AC_NAME}}</td>
