--- a/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
+++ b/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
@@ -62,7 +62,7 @@
                 </tr>                              
                 <th colspan="17">
                     <div class="search-container">
-                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search..." style="float: left;">
                     </div>
                 </th>
                 <tr *ngIf="Headers.length !=0">
@@ -79,7 +79,7 @@
                       </div>
                     </div>
                   </th> 
-                  <th scope="col"style="width: max-content;" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
+                   <th scope="col" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
                     <div class="filter-container">
                       <div class="filter-toggle" (click)="toggleFilter(data.VALUE)">
                         <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
@@ -91,7 +91,7 @@
                         </div>
                       </div>
                     </div>
-                  </th>
+                  </th> 
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
