--- a/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
+++ b/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
@@ -30,7 +30,7 @@
         <div class="col-sm-2">
           <div class="form-group form-primary form-static-label">
             <span class="border-lable-flt">
-              <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME
+              <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME autofocus
                 [(ngModel)]="selectedYear" formControlName="YEAR_NAME" (focus)="onFocus(YEAR_NAME)"
                 [selectOnTab]='true'>
                 <ng-option *ngFor="let values of finyear" [value]="values">
@@ -111,22 +111,172 @@
                   <th class="td_right">{{priviousFour | date :'MMM yyyy'}}</th>
                   <th class="td_right">{{priviousFive | date :'MMM yyyy'}}</th>
                 </tr>
-              <!-- </thead> -->
-              <!-- <thead style="position: sticky; top: 0; text-align: center;"> -->
-               
+              <!-- </thead>
+              <thead style="position: sticky; top: 0; text-align: center;"> -->
+                <!-- <tr>                               
+                </tr>                              
+                <th colspan="6">
+                    <div class="search-container">
+                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search... "  style="float: left;">
+                    </div>
+                </th> -->
                 <tr class="sticky-header">
-                  <th class="td_right table-header">Sr. No.</th>
-                  <th class="td_left table-header">Name of Customer</th>
-                  <th class="td_right table-header">Payment Amount Plan For The Month Rs.</th>
-                  <th class="td_right table-header">Amount Received Rs.</th>
-                  <th class="td_right table-header">% of Recovery</th>
-                  <th class="td_right table-header">Credit Day</th>
-                  <th class="td_right table-header">Avg Payment Receipt Days</th>
-                  <th class="td_right table-header">Avg Payment Receipt Days</th>
-                  <th class="td_right table-header">Avg Payment Receipt Days</th>
-                  <th class="td_right table-header">Avg Payment Receipt Days</th>
-                  <th class="td_right table-header">Avg Payment Receipt Days</th>
-                  <th class="td_right table-header">Avg Payment Receipt Days</th>
+                  <th class="td_right table-header">Sr. No. 
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('SrNo')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['SrNo']}">
+                        <div class="filter-option" (click)="applyFilter('SrNo', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['SrNo']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('SrNo')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_left table-header">Name of Customer 
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('NameofCustomer')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['NameofCustomer']}">
+                        <div class="filter-option" (click)="applyFilter('SrNo', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['NameofCustomer']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('NameofCustomer')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right table-header">Payment Amount Plan For The Month Rs.
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('PaymentAmountPlanForTheMonthRs.')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['PaymentAmountPlanForTheMonthRs.']}">
+                        <div class="filter-option" (click)="applyFilter('SrNo', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['PaymentAmountPlanForTheMonthRs.']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('PaymentAmountPlanForTheMonthRs.')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right table-header">Amount Received Rs.
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('AmountReceivedRs.')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['AmountReceivedRs.']}">
+                        <div class="filter-option" (click)="applyFilter('SrNo', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['AmountReceivedRs.']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('AmountReceivedRs.')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right table-header">% of Recovery 
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('%ofRecovery.')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['%ofRecovery.']}">
+                        <div class="filter-option" (click)="applyFilter('SrNo', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['%ofRecovery.']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('%ofRecovery.')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right table-header">Credit Day
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('CreditDay')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CreditDay']}">
+                        <div class="filter-option" (click)="applyFilter('CreditDay', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['CreditDay']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('CreditDay')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right table-header">Avg Payment Receipt Days 
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('AvgPaymentReceiptDays')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['AvgPaymentReceiptDays']}">
+                        <div class="filter-option" (click)="applyFilter('AvgPaymentReceiptDays', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['AvgPaymentReceiptDays']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('AvgPaymentReceiptDays')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right table-header">Avg Payment Receipt Days
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('AvgPaymentReceiptDays1')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['AvgPaymentReceiptDays1']}">
+                        <div class="filter-option" (click)="applyFilter('AvgPaymentReceiptDays1', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['AvgPaymentReceiptDays1']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('AvgPaymentReceiptDays1')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right table-header">Avg Payment Receipt Days
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('AvgPaymentReceiptDays2')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['AvgPaymentReceiptDays2']}">
+                        <div class="filter-option" (click)="applyFilter('AvgPaymentReceiptDays2', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['AvgPaymentReceiptDays2']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('AvgPaymentReceiptDays2')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right table-header">Avg Payment Receipt Days
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('AvgPaymentReceiptDays3')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['AvgPaymentReceiptDays3']}">
+                        <div class="filter-option" (click)="applyFilter('AvgPaymentReceiptDays3', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['AvgPaymentReceiptDays3']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('AvgPaymentReceiptDays3')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right table-header">Avg Payment Receipt Days
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('AvgPaymentReceiptDays4')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['AvgPaymentReceiptDays4']}">
+                        <div class="filter-option" (click)="applyFilter('AvgPaymentReceiptDays4', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['AvgPaymentReceiptDays4']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('AvgPaymentReceiptDays4')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right table-header">Avg Payment Receipt Days
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('AvgPaymentReceiptDays5')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['AvgPaymentReceiptDays5']}">
+                        <div class="filter-option" (click)="applyFilter('AvgPaymentReceiptDays5', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['AvgPaymentReceiptDays5']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('AvgPaymentReceiptDays5')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
