--- a/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
+++ b/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
@@ -83,24 +83,76 @@
                                 </tr>                              
                                 <th colspan="6">
                                     <div class="search-container">
-                                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search..." style="float: left;">
                                     </div>
                                 </th>
                                 <tr>
-                                    <th class="td_left" *ngFor="let column of tableColumns">
-                                      {{ column }}
-                                      <div class="filter-container">
-                                        <div class="filter-toggle" (click)="toggleFilter(column)">
-                                          <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                                        </div>
-                                        <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
-                                          <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
-                                          <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
-                                            <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                                    <th scope="col" class="td_right">Sr.No.
+                                        <div class="filter-container">
+                                            <div class="filter-toggle" (click)="toggleFilter('SrNo')">
+                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                                            </div>
+                                            <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['SrNo']}">
+                                              <div class="filter-option" (click)="applyFilter('SrNo', 'Option 1')">Filter</div>
+                                              <div class="input-box" [class.show-input]="isFilterInputOpen['SrNo']">
+                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('SrNo')">
+                                              </div>
+                                            </div>
                                           </div>
-                                        </div>
-                                      </div>
                                     </th>
+                                    <th scope="col" class="td_left">Customer
+                                        <div class="filter-container">
+                                            <div class="filter-toggle" (click)="toggleFilter('Customer')">
+                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                                            </div>
+                                            <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Customer']}">
+                                              <div class="filter-option" (click)="applyFilter('Customer', 'Option 1')">Filter</div>
+                                              <div class="input-box" [class.show-input]="isFilterInputOpen['Customer']">
+                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('Customer')">
+                                              </div>
+                                            </div>
+                                          </div>
+                                    </th>
+                                    <th scope="col" class="td_right">Sch. Qty
+                                        <div class="filter-container">
+                                            <div class="filter-toggle" (click)="toggleFilter('Sch.Qty')">
+                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                                            </div>
+                                            <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Sch.Qty']}">
+                                              <div class="filter-option" (click)="applyFilter('Sch.Qty', 'Option 1')">Filter</div>
+                                              <div class="input-box" [class.show-input]="isFilterInputOpen['Sch.Qty']">
+                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('Sch.Qty')">
+                                              </div>
+                                            </div>
+                                          </div>
+                                    </th>
+                                    <th scope="col" class="td_right">Disp. Qty
+                                        <div class="filter-container">
+                                            <div class="filter-toggle" (click)="toggleFilter('Disp.Qty')">
+                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                                            </div>
+                                            <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Disp.Qty']}">
+                                              <div class="filter-option" (click)="applyFilter('Disp.Qty', 'Option 1')">Filter</div>
+                                              <div class="input-box" [class.show-input]="isFilterInputOpen['Disp.Qty']">
+                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('Disp.Qty')">
+                                              </div>
+                                            </div>
+                                          </div>
+                                    </th>
+                                    <th scope="col" class="td_right">Adherence
+                                        <div class="filter-container">
+                                            <div class="filter-toggle" (click)="toggleFilter('Adherence')">
+                                              <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                                            </div>
+                                            <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Adherence']}">
+                                              <div class="filter-option" (click)="applyFilter('Adherence', 'Option 1')">Filter</div>
+                                              <div class="input-box" [class.show-input]="isFilterInputOpen['Adherence']">
+                                                <input type="text" placeholder=" " (blur)="toggleFilterInput('Adherence')">
+                                              </div>
+                                            </div>
+                                          </div>
+                                    </th>
+
                                     
                   
                                     </tr>
